--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ android {
     compileSdkVersion 29
     buildToolsVersion "29.0.3"
     defaultConfig {
-        applicationId "me.sebi.rwremount"
+        applicationId "com.gitlab.giwiniswut.rwremount"
         minSdkVersion 23
         targetSdkVersion 29
         versionCode 1
