--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,7 +16,7 @@ android {
         targetSdkVersion 30
         versionCode 1
         versionName "1.0.0"
-        archivesBaseName = "RWRemount_${versionName}_${getGitHash()}"
+        archivesBaseName = "SDRemount_${versionName}_${getGitHash()}"
     }
     buildTypes {
         release {
