--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,10 +1,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.gitlab.giwiniswut.rwremount">
 
-    <application android:label="External Storage R/W Remounter">
+    <application android:label="@string/app_label">
         <activity
-            android:name=".MainActivity"
-            android:label="Enable R/W Remounter">
+            android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
